全経路にタグありパターン追加

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
 		<a href="https://ga-cross-domain-tracking-test-site2.netlify.com/tag3-1.html" target="_blank"
 			style="color: darkred;">遷移先：タグあり</a>
 	</p>
+	<p>
+		<a href="https://ga-cross-domain-tracking-test-site2.netlify.com/tag4.html" target="_blank">
+			全経路にタグありパターン
+		</a>
+	</p>
 </body>
 
 </html>
